<?xml version="1.0"?>
<package format="2">
  <name>airsim_utils</name>
  <version>0.0.1</version>
  <description>The AirSim Utils package</description>
  <maintainer email="caochao@todo.todo">caochao</maintainer>
  <license>CMU Non-commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
</package>
