<package format="3">
  <name>airsim_utils</name>
  <version>0.0.1</version>
  <description>The AirSim Utils package</description>
  <maintainer email="ccao1@andrew.cmu.edu">Chao Cao</maintainer>
  <license>CMU Non-commercial</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
