<package format="3">
  <name>control_tuner</name>
  <version>0.0.1</version>
  <description>Control Tuner</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <license>CMU Non-commercial</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
